--- a/week03/dz2_3.ipynb
+++ b/week03/dz2_3.ipynb
@@ -9,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.0  - Количество совпадающих пар\n"
+      "3.0 [2, 1, 1, 1, 1, 2, 3]  - Количество совпадающих пар\n"
      ]
     }
    ],
@@ -31,14 +31,54 @@
     "    lc=[lst.count(i) for i in m]#число уникальных элементов списка\n",
     "    for i in lc:\n",
     "\n",
-    "        if i%2:\n",
+    "        if i//2==0:\n",
     "            n=n+i/2\n",
     "        elif i>2:\n",
     "            n=n+(i-1)/2\n",
     "                \n",
-    "    print(n,' - Количество совпадающих пар')\n",
-    "lst=[1,1,2,3,4,5,]\n",
+    "    print(n,lc,' - Количество совпадающих пар')\n",
+    "lst=[1,1,2,3,4,5,6,6,7,7,7]\n",
     "равныепары(lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(3-1)/2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1//2"
    ]
   },
   {
